# OpenCV_Practice

./: .gitignore
bgColorChanger/: CMakeLists.txt  main.cpp
bgColorChanger/libs/glad/include/glad/: glad.h
bgColorChanger/libs/glad/src/: glad.c
hexagram/: CMakeLists.txt  main.cpp
star/: CMakeLists.txt  calc.cpp  calc.h  general.cpp
star/includes/math/: header_math.h
star/tests/: CMakeLists.txt  test.cpp
